--- a/SistemaInventario/appsettings.Development.json
+++ b/SistemaInventario/appsettings.Development.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "ConexionSql": "Server=(localdb)\\mssqllocaldb;Database=aspnet-SistemaInventario-3d82808b-6eaa-4fd7-b119-415da237415f;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "ConexionSql": "Server=AYALA;Database=SistemaInventarioV8;Encrypt=false;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
