--- a/SistemaInventario.AccesoDatos/SistemaInventario.AccesoDatos.csproj
+++ b/SistemaInventario.AccesoDatos/SistemaInventario.AccesoDatos.csproj
@@ -8,6 +8,16 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="8.0.10" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="8.0.10" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.10" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\SistemaInventario.Modelo\SistemaInventario.Modelo.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Repositorio\IRepositorio\" />
   </ItemGroup>
 
 </Project>
